# prod_be

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
common/: urls.py
common/auth/: firebase.py
common/migrations/: 0001_initial.py
common/models/: user.py
common/serializers/: auth.py
common/views/: auth.py
prod_be/: asgi.py  settings.py  urls.py  wsgi.py
